src/main/java/com/example/fooddelivery/error/NotFoundDeiveryGuyException.java
package com.example.fooddelivery.error;

public class NotFoundDeiveryGuyException extends RuntimeException{
    public NotFoundDeiveryGuyException(String message){
        super(message);
    }
}
